--- a/absolute-beginner-py3.lyx
+++ b/absolute-beginner-py3.lyx
@@ -98,7 +98,7 @@ Ryan E.
 \end_layout
 
 \begin_layout Institute
-PySprings 
+PySprings
 \begin_inset Newline newline
 \end_inset
 
@@ -106,7 +106,7 @@ PySprings
 \end_layout
 
 \begin_layout Date
-2017-06-10
+2017-08-19
 \end_layout
 
 \begin_layout Subtitle
@@ -159,9 +159,9 @@ AtBeginSubsection[]{
 
 \begin_layout Plain Layout
 
-  
+
 \backslash
-frame<beamer>{ 
+frame<beamer>{
 \end_layout
 
 \begin_layout Plain Layout
@@ -170,9 +170,9 @@ frame<beamer>{
 
 \begin_layout Plain Layout
 
-    
+
 \backslash
-frametitle{Outline}   
+frametitle{Outline}
 \end_layout
 
 \begin_layout Plain Layout
@@ -181,9 +181,9 @@ frametitle{Outline}
 
 \begin_layout Plain Layout
 
-    
+
 \backslash
-tableofcontents[currentsection,currentsubsection] 
+tableofcontents[currentsection,currentsubsection]
 \end_layout
 
 \begin_layout Plain Layout
@@ -330,7 +330,6 @@ All communication should be appropriate for a professional audience including
 Be kind to others.
  Make an environment conducive to learning.
  Behave professionally.
- 
 \end_layout
 
 \begin_layout Itemize
@@ -338,7 +337,7 @@ Thank you for helping make this a welcoming, friendly event for all.
 \end_layout
 
 \begin_layout Itemize
-Contact the organizers at 
+Contact the organizers at
 \begin_inset Flex URL
 status collapsed
 
@@ -349,7 +348,7 @@ pysprings@pysprings.org
 
 \end_inset
 
- or 
+ or
 \begin_inset Flex URL
 status collapsed
 
@@ -500,7 +499,7 @@ Invention What have we learned through our exploration? What surprises did
 
 \end_deeper
 \begin_layout Description
-Application With our newly 
+Application With our newly
 \begin_inset Quotes eld
 \end_inset
 
@@ -508,11 +507,7 @@ invented
 \begin_inset Quotes erd
 \end_inset
 
- knowledge, what can we do? This
-\emph on
- 
-\emph default
-leads into a new exploration phase
+ knowledge, what can we do? Thisleads into a new exploration phase
 \end_layout
 
 \end_deeper
@@ -583,7 +578,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{An Example}
 \end_layout
@@ -611,7 +606,7 @@ secretPassword = passwordFile.read()
 
 \begin_layout Plain Layout
 
-print 'Enter your password.'
+print('Enter your password.')
 \end_layout
 
 \begin_layout Plain Layout
@@ -626,7 +621,7 @@ if typedPassword == secretPassword:
 
 \begin_layout Plain Layout
 
-    print 'Access granted'
+    print('Access granted')
 \end_layout
 
 \begin_layout Plain Layout
@@ -641,12 +636,12 @@ if typedPassword == secretPassword:
 
 \begin_layout Plain Layout
 
-    else:
+else:
 \end_layout
 
 \begin_layout Plain Layout
 
-        print('Access denied')
+    print('Access denied')
 \end_layout
 
 \end_inset
@@ -686,7 +681,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Running Python}
 \end_layout
@@ -712,7 +707,7 @@ status open
 
 \begin_layout Plain Layout
 
-$ python
+$ python3
 \end_layout
 
 \end_inset
@@ -781,7 +776,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Installing Python}
 \end_layout
@@ -822,7 +817,7 @@ status open
 
 \begin_layout Plain Layout
 
-$ python script.py
+$ python3 script.py
 \end_layout
 
 \end_inset
@@ -906,7 +901,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Notation}
 \end_layout
@@ -966,7 +961,7 @@ print("Hello, World!)
 \end_layout
 
 \begin_layout Standard
-it means to type that out into a file, in this case, named 
+it means to type that out into a file, in this case, named
 \emph on
 example.py
 \emph default
@@ -1001,7 +996,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Python as a Calculator}
 \end_layout
@@ -1190,7 +1185,7 @@ abs bin hex oct ord round
 
 \family typewriter
 \series bold
-divmod min max pow 
+divmod min max pow
 \family default
 \series default
 
@@ -1278,7 +1273,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Functions}
 \end_layout
@@ -1362,7 +1357,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Functions}
 \end_layout
@@ -1431,7 +1426,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Functions}
 \end_layout
@@ -1463,12 +1458,12 @@ def add(a, b):
 
 \begin_layout Plain Layout
 
-print add(1,2)
+print(add(1,2))
 \end_layout
 
 \begin_layout Plain Layout
 
-print add(1,2) + add(3,4)
+print(add(1,2) + add(3,4))
 \end_layout
 
 \end_inset
@@ -1508,7 +1503,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Strings}
 \end_layout
@@ -1622,7 +1617,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Strings}
 \end_layout
@@ -1711,7 +1706,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Hello again}
 \end_layout
@@ -1738,7 +1733,7 @@ name = input('What is your name? ')
 
 \begin_layout Plain Layout
 
-print 'Hello, ' + name + '!'
+print('Hello, ' + name + '!')
 \end_layout
 
 \end_inset
@@ -1757,7 +1752,7 @@ status open
 
 \begin_layout Plain Layout
 
-$ python hello.py
+$ python3 hello.py
 \end_layout
 
 \end_inset
@@ -1841,7 +1836,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Indexing}
 \end_layout
@@ -1935,7 +1930,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Indexing}
 \end_layout
@@ -2066,7 +2061,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Lists}
 \end_layout
@@ -2151,7 +2146,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Lists}
 \end_layout
@@ -2285,7 +2280,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Dictionaries}
 \end_layout
@@ -2361,7 +2356,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Dictionaries}
 \end_layout
@@ -2484,7 +2479,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Environments}
 \end_layout
@@ -2556,7 +2551,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Installing Third-Party Packages}
 \end_layout
@@ -2573,7 +2568,7 @@ status open
 
 \begin_layout Plain Layout
 
-$ pip install requests
+$ pip3 install requests
 \end_layout
 
 \end_inset
@@ -2638,7 +2633,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Requests Example}
 \end_layout
@@ -2670,7 +2665,7 @@ resp = requests.get('http://httpbin.org/ip')
 
 \begin_layout Plain Layout
 
-print resp.json()
+print(resp.json())
 \end_layout
 
 \end_inset
@@ -2710,7 +2705,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Booleans}
 \end_layout
@@ -2819,7 +2814,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Looping and Branching}
 \end_layout
@@ -2848,13 +2843,12 @@ status open
 \begin_layout Plain Layout
 
 ...
-     print word.title()
+     print(word.title())
 \end_layout
 
 \begin_layout Plain Layout
 
 ...
-     
 \end_layout
 
 \begin_layout Plain Layout
@@ -2916,7 +2910,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Looping and Branching}
 \end_layout
@@ -3063,7 +3057,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Looping and Branching}
 \end_layout
@@ -3115,7 +3109,7 @@ while True:
 
 \begin_layout Plain Layout
 
-        print "Access denied!"
+        print("Access denied!")
 \end_layout
 
 \end_inset
@@ -3206,7 +3200,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Looping and Branching}
 \end_layout
@@ -3287,7 +3281,7 @@ end{frame}
 status open
 
 \begin_layout Plain Layout
-Practice Problems 
+Practice Problems
 \end_layout
 
 \end_inset
@@ -3327,7 +3321,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Practice Problems}
 \end_layout
@@ -3396,7 +3390,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Practice Problems}
 \end_layout
@@ -3412,7 +3406,7 @@ You are creating a fantasy video game.
  where the keys are string values describing the item in the inventory and
  the value is an integer value detailing how many of that item the player
  has.
- For example, the dictionary value 
+ For example, the dictionary value
 \begin_inset listings
 inline false
 status open
@@ -3456,7 +3450,7 @@ status open
 
 
 \backslash
-begin{frame}[fragile] 
+begin{frame}[fragile]
 \backslash
 frametitle{Practice Problems}
 \end_layout
@@ -3555,7 +3549,7 @@ Final Takeaways (1-2-4-all)
 \end_layout
 
 \begin_layout Itemize
-Survey 
+Survey
 \begin_inset Flex URL
 status collapsed
 
@@ -3570,7 +3564,7 @@ https://goo.gl/forms/ZpNl0z8pw5J8J8Rv1
 \end_layout
 
 \begin_layout Itemize
-Feedback – 
+Feedback –
 \begin_inset Flex URL
 status collapsed
 
@@ -3585,7 +3579,7 @@ http://sayat.me/pysprings
 \end_layout
 
 \begin_layout Itemize
-Based on 
+Based on
 \begin_inset Flex URL
 status collapsed
 
@@ -3596,7 +3590,7 @@ https://automatetheboringstuff.com/
 
 \end_inset
 
- released under 
+ released under
 \begin_inset Graphics
 	filename cc-by-nc-sa.png
 	height 1ex
@@ -3629,7 +3623,7 @@ Projects!
 
 \begin_deeper
 \begin_layout Itemize
-Daily Programmer 
+Daily Programmer
 \begin_inset Flex URL
 status open
 
@@ -3650,7 +3644,7 @@ Game of Threes
 
 \end_deeper
 \begin_layout Itemize
-WordPlay 
+WordPlay
 \begin_inset Flex URL
 status open
 
@@ -3665,7 +3659,7 @@ https://github.com/jesstess/Wordplay
 \end_layout
 
 \begin_layout Itemize
-Colorwall 
+Colorwall
 \begin_inset Flex URL
 status open
 
