Fixing the `Installing Python` title
It's actually part of the `Running Python` slides.

--- a/absolute-beginner-py3.lyx
+++ b/absolute-beginner-py3.lyx
@@ -798,7 +798,7 @@ status open
 \backslash
 begin{frame}[fragile] 
 \backslash
-frametitle{Installing Python}
+frametitle{Running a Python Script}
 \end_layout
 
 \end_inset
