--- a/absolute-beginner-py3.lyx
+++ b/absolute-beginner-py3.lyx
@@ -3391,10 +3391,27 @@ spam = ['apples', 'bananas', 'tofu', 'cats']
 
 \begin_layout Standard
 Write a function that takes a list value as an argument and returns a string
- with all the items separated by a comma and a space, with and inserted
- before the last item.
+ with all the items separated by a comma and a space, with the word 
+\begin_inset Quotes eld
+\end_inset
+
+and
+\begin_inset Quotes erd
+\end_inset
+
+ inserted before the last item.
  For example, passing the previous spam list to the function would return
- 'apples, bananas, tofu, and cats'.
+ 
+\begin_inset Flex Structure
+status open
+
+\begin_layout Plain Layout
+'apples, bananas, tofu, and cats'
+\end_layout
+
+\end_inset
+
+.
  But your function should be able to work with any list value passed to
  it.
 \end_layout
